--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,10 @@ h3.letrs-video {
     border-right: 5px solid #3069b2;
 }
 
+.quote-img-left {
+    margin: 0 1em 1em 0;
+}
+
 /****************************
 UNDER 1200
 ****************************/
