Change stylesheet name to prevent caching issues with client review

--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,10 @@ h3.letrs-video {
     margin: 0 1em 1em 0;
 }
 
+p.quote-author {
+    font-size: .8em;
+}
+
 /****************************
 UNDER 1200
 ****************************/
